[package]
name = "lowpower-gateway-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ipfs = { path = "./patch_libs/rust-ipfs" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
libipld = "0.16"
anyhow = "1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
