[package]
name = "lowpower-gateway-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ipfs = { path = "./patch_libs/rust-ipfs" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
libipld = "0.16"
anyhow = "1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }

bs58 = "0.5"
tracing-subscriber = { default-features = false, features = [
    "fmt",
    "tracing-log",
    "ansi",
    "env-filter",
], version = "0.3" }
rustyline-async = "0.3"
libp2p = "0.52.3"
log = "0.4.20"
env_logger = "0.10.0"
rand = "0.8.5"
chrono = "0.4.31"
